# kordex

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  vix.json
.github/workflows/: build.yml  ci.yml  release.yml
cmake/: KordexConfig.cmake.in  KordexDependencies.cmake  KordexInstall.cmake  KordexModules.cmake  KordexOptions.cmake
docs/: kordex-release-workflow.md
examples/: README.md
examples/01-hello/: main.js
examples/02-typescript/: main.ts
examples/03-relative-import/: main.js  message.js
examples/04-extension-resolution/: main.js  message.js
examples/05-directory-index/: main.js
examples/05-directory-index/pkg/: index.js
examples/06-json-import/: main.js  user.json
examples/07-console/: main.js
examples/08-path/: main.js
examples/09-timer/: main.js
examples/10-crypto/: main.js
examples/11-fs/: main.js
examples/12-env/: main.js
examples/13-process/: main.js
examples/14-http/: main.js
examples/15-softadastra/: README.md  main.js
npm/kordex/: README.md  package.json
npm/linux-x64/: index.js  package.json
scripts/: package-linux.sh  package-npm-linux.sh  release-linux-local.sh  test-npm-linux.sh
